# PDB_IO

./: Makefile  PDBFile.py  PDBFormatError.py  README.md  pyproject.toml
example/: detect_ligand_example.ipynb  pdbfiles.list
src/: PDBAtom.py  PDBFile.py  PDBLine.py  __main__.py  all_in_one_script.BAK.py
src/pdb_io/: PDBAtom.py  PDBFile.py  PDBLine.py  __init__.py  __main__.py
