[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb_io"
dynamic = ["version"]
description = "Create peptide PDB files with specified geometry"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
authors = [
    {name = "Susanne Hermans", email = "susanne.hermans@gmail.com"},
]
maintainers = [
    {name = "Susanne Hermans", email = "susanne.hermans@gmail.com"},
]
dependencies = [
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/susannehermans/PDB_IO"

[tool.setuptools.dynamic]
version = {attr = "pdb_io.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
